@@ -281,6 +281,7 @@ jsp.dspace-admin.eperson-main.heading = Administer EPeople
 jsp.dspace-admin.eperson-main.or = OR
 jsp.dspace-admin.eperson-main.then = then
 jsp.dspace-admin.eperson-main.title = EPerson Administrations
+jsp.dspace-admin.eperson-main.noepersonselected = No EPerson selected!
 
 jsp.dspace-admin.group-eperson-select.add = Add EPerson
 jsp.dspace-admin.group-eperson-select.heading = Select EPerson to Add to Group {0}
